kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-circuit-breaker
  labels:
    app: spring-boot-circuit-breaker
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: spring-boot-circuit-breaker
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-circuit-breaker-nodeport
  labels:
    app: spring-boot-circuit-breaker
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: spring-boot-circuit-breaker
